css/style.css
@font-face {
  font-family: CocogooseLight;
  src: url(../fonts/Cocogoose\ Pro\ Light-trial.ttf);
}

@font-face {
  font-family: CocogooseThin;
  src: url(../fonts/Cocogoose\ Pro\ Thin-trial.ttf);
}

@font-face {
  font-family: CocogooseUltralight;
  src: url(../fonts/Cocogoose\ Pro\ Ultralight-trial.ttf);
}

@font-face {
  font-family: CocogooseBold;
  src: url(../fonts/Cocogoose\ Pro-trial.ttf);
}

/* Variables used in the projects */

:root {
  --primary-color: #272a31;
  --secondary-color: #ec5242;
  --secondary-transparent-color: #ec5342db;
  --tertiary-color: #d3d3d3;
  --white-color: #fff;
  --primary-color-bg: #fff1;
  --lato-font-family: 'Lato', sans-serif;
}

/* General styles STARTS */

body {
  padding: 0;
  margin: 0;
  border: 0;
}

#activeNowHome {
  color: var(--secondary-color);
}

#activeNowAbout {
  color: var(--secondary-color);
}

#activeNowTickets {
  color: var(--secondary-color);
}

/* General styles ENDS */

/* Navbar STARTS */

.first-navbar,
.first-navbar nav,
.first-navbar div {
  background-color: var(--primary-color);
  font-family: var(--lato-font-family);
}

.second-navbar {
  background-color: var(--white-color);
  position: fixed;
  width: 100%;
}

.Navbar-button {
  padding: 8px;
  border: 5px var(--secondary-color) solid;
  color: var(--secondary-color);
  background-color: var(--white-color);
}

/* Navbar ENDS */

/* Hero Page STARTS */

.hero-page {
  background: linear-gradient(0deg, rgba(250, 250, 236, 0.85) 0%, rgba(255, 255, 255, 0.85) 102%, rgba(255, 255, 255, 0.97) 100%), url(../img/background-heropage.jpg);
  width: 100%;
  padding: 0;
  background-repeat: no-repeat;
  background-position: center;
}

.main-section {
  padding: 8px;
  color: var(--secondary-color);
}

.main-section div {
  font-size: 22px;
  font-weight: 400;
  margin-top: 0;
}

.main-section h1 {
  font-size: 30px;
  font-family: CocogooseBold, sans-serif;
  letter-spacing: 1.5px;
  color: var(--secondary-transparent-color);
}

.main-section p {
  font-size: 14px;
  color: var(--primary-color);
}

.main-section h1::after {
  content: ' 2021';
  font-family: sans-serif;
  font-weight: 900;
}

@media screen and (min-width: 768px) {
  .second-navbar {
    position: relative;
  }

  .main-section h1 {
    margin-top: 16px;
    font-size: 50px;
    font-weight: 800;
    font-family: CocogooseBold, sans-serif;
    letter-spacing: 1.5px;
    color: var(--secondary-transparent-color);
  }

  .main-section div {
    font-size: 36px;
    font-weight: 400;
  }
}

/* Hero Page ENDS */

/* About section STARTS */

.about-page {
  background-color: var(--primary-color);
  background-image:
    radial-gradient(#000 5%, transparent 5%),
    radial-gradient(#000 5%, transparent 5%);
  background-size: 30px 30px;
  background-position: 0 0, 15px 15px;
  padding: 64px 8px;
}

.about-section {
  color: var(--tertiary-color);
  text-align: center;
}

.about-line {
  border-top: var(--secondary-color) 1px solid;
  width: 15%;
  max-width: 104px;
  margin: 0 auto;
}

.about-cards {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
}

.about-item {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  margin: 8px 8px;
  border: var(--tertiary-color) 1px solid;
  padding: 32px 16px;
  max-width: 100%;
  background-color: var(--primary-color-bg);
}

.about-item img {
  background-color: var(--tertiary-color);
  border-radius: 44px;
  padding: 12px;
}

.about-item h3 {
  color: var(--secondary-color);
  text-align: left;
  margin: 16px;
  margin-left: 16px;
}

.about-item p {
  color: var(--tertiary-color);
  font-weight: 600;
  font-size: 18px;
  text-align: justify;
  margin-left: 16px;
}

@media screen and (min-width: 768px) {
  .about-item {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    align-items: center;
    margin: 8px 4px;
    border: var(--tertiary-color) 1px solid;
    padding: 32px 12px;
    min-width: 250px;
    max-width: 250px;
    background-color: var(--primary-color-bg);
  }

  .about-item h3 {
    text-align: center;
    margin: 16px auto;
  }

  .about-item p {
    text-align: center;
    margin: 0;
    font-size: 14px;
  }
}

/* About section ENDS */

/* Tickets Section STARTS */

.ticket-page,
.ticket-section {
  background: #eee;
}

.tickets-instructions {
  font-weight: 600;
  padding: 6px 0;
  max-width: 650px;
  margin-left: auto;
  margin-right: auto;
}

.tickets-instructions strong {
  color: var(--secondary-color);
  font-weight: 800;
}

.ticket-grid {
  display: grid;
  grid-template-columns: repeat(5, 1fr);
  grid-template-rows: repeat(4, 1fr);
  grid-column-gap: 1px;
  grid-row-gap: 1px;
  overflow-x: auto;
  border: 10px solid transparent;
  background:
    linear-gradient(#fff, #fff) center/calc(100% - 2px) calc(100% - 2px) padding-box,
    repeating-linear-gradient(
      -45deg,
      transparent 2px,
      transparent 2px,
      var(--primary-color) 16px,
      var(--white-color) 32px,
      var(--secondary-color) 48px
    ) border-box;
  background-repeat: no-repeat;
}

.div1 {
  grid-area: 1 / 1 / 2 / 2;
  background: #eee;
}

.div2 {
  grid-area: 1 / 2 / 2 / 3;
  background: #eee;
}

.div3 {
  grid-area: 1 / 3 / 2 / 5;
  background: #eee;
}

.div4 {
  grid-area: 1 / 5 / 2 / 6;
  background: #eee;
}

.div5 { grid-area: 2 / 1 / 3 / 2; }
.div6 { grid-area: 2 / 2 / 3 / 3; }
.div7 { grid-area: 2 / 3 / 3 / 4; }
.div8 { grid-area: 2 / 4 / 3 / 5; }
.div9 { grid-area: 2 / 5 / 3 / 6; }
.div10 { grid-area: 3 / 1 / 4 / 2; }
.div11 { grid-area: 3 / 2 / 4 / 3; }
.div12 { grid-area: 3 / 3 / 4 / 4; }
.div13 { grid-area: 3 / 4 / 4 / 5; }
.div14 { grid-area: 3 / 5 / 4 / 6; }
.div15 { grid-area: 4 / 1 / 5 / 2; }
.div16 { grid-area: 4 / 2 / 5 / 3; }
.div17 { grid-area: 4 / 3 / 5 / 4; }
.div18 { grid-area: 4 / 4 / 5 / 5; }
.div19 { grid-area: 4 / 5 / 5 / 6; }

.ticket-grid div {
  display: flex;
  height: 100%;
  min-width: 124px;
  justify-content: center;
  align-items: center;
  border: #ccc 1px solid;
}

.price-grid {
  font-weight: 500;
  font-size: 20px;
  padding-top: 8px;
  color: var(--secondary-color);
}

.submit-buttom {
  background-color: var(--secondary-color);
  color: var(--tertiary-color);
  border: none;
  max-width: 350px;
  margin: auto auto;
}

.submit-buttom:hover {
  opacity: 0.8;
}

/* Tickets Section ENDS */

/* Footer STARTS */

footer {
  background-color: var(--primary-color);
  padding: 16px 0;
  color: var(--tertiary-color);
  font-weight: 600;
  font-size: 12px;
}

footer ul {
  list-style-type: none;
  text-decoration: none;
}

footer i {
  font-size: 24px;
  color: var(--secondary-color);
  margin: 4px 16px;
  background-color: var(--tertiary-color);
  padding: 8px;
  border-radius: 35px;
  border: var(--tertiary-color) 1px solid;
}

footer i:hover {
  background-color: var(--primary-color);
  color: var(--tertiary-color);
}

/* Footer ENDS */

/* Links styles */

footer a {
  color: var(--secondary-color);
}

.first-navbar a {
  color: var(--tertiary-color);
  font-family: var(--lato-font-family);
}

.second-navbar a {
  color: var(--tertiary-color);
  font-family: var(--lato-font-family);
  font-weight: 600;
  padding: 0;
}

a:hover {
  opacity: 0.85;
}

footer a:hover {
  color: var(--tertiary-color);
  text-decoration: underline;
}

/* Featured speakers STARTS */

.featured-speaker-card .image-spaker {
  min-width: 144px;
  height: 130px;
}

.speaker-img {
  height: 110px;
  width: 122px;
}

.text-speaker {
  margin: 12px 0;
  padding: 4px;
}

.text-speaker h4 {
  font-weight: 700;
}

.text-speaker span {
  color: var(--secondary-color);
  font-style: italic;
}

.text-speaker-line {
  margin: 8px 0;
  max-height: 1px;
  min-width: 26px;
  max-width: 32px;
  border-top: var(--primary-color) 1px solid;
}

@media screen and (min-width: 768px) {
  .featured-speaker-card .image-spaker {
    min-width: 164px;
    height: 150px;
  }

  .speaker-img {
    height: 130px;
    width: 144px;
  }

  .w-md-75 {
    margin: 16px auto;
    width: 80%;
  }
}

/* Featured speakers ENDS */

/* About main page STARTS */

.about-main-section {
  height: auto;
}

.about-main-section h1 {
  font-family: CocogooseBold, sans-serif;
  color: #ec5242;
  font-size: 28px;
}

.about-main-section h1::after {
  content: ' 2021';
  font-family: sans-serif;
  color: #ec5242;
  font-weight: 900;
}

.fs-12 {
  font-size: 14px;
}

@media screen and (min-width: 768px) {
  .fs-12 {
    font-size: 18px;
  }

  .about-main-section h1 {
    font-family: CocogooseBold, sans-serif;
    color: #ec5242;
    font-size: 42px;
  }
}

/* About main page STARTS */

/* About logo STARTS */

.logo-border {
  margin: 8px auto;
  max-width: 350px;
}

/* About logo ENDS */

/* Past Bootcamps STARTS */

.pastBootcamp-card1 {
  min-height: 250px;
  max-height: 320px;
  background: linear-gradient(0deg, rgba(251, 58, 10, 0.65) 0%, rgba(248, 58, 11, 0.65) 102%, rgba(255, 152, 42, 0.97) 100%), url(../img/pastBootcamp1.jpg);
  padding: 0;
  background-repeat: no-repeat;
  background-position: center;
  color: var(--tertiary-color);
}

.pastBootcamp-card2 {
  min-height: 250px;
  max-height: 320px;
  background: linear-gradient(0deg, rgba(251, 58, 10, 0.65) 0%, rgba(248, 58, 11, 0.65) 102%, rgba(255, 152, 42, 0.97) 100%), url(../img/pastBootcamp2.jpg);
  padding: 0;
  background-repeat: no-repeat;
  background-position: center;
  color: var(--tertiary-color);
}

/* Past Bootcamps ENDS */

